# riverstone-voice-svc

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  brief.txt  calls.db  fly.toml
.github/workflows/: fly-deploy.yml
src/: main.rs
