[package]
name = "riverstone-voice-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
